// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TAG COMPONENT should render 1`] = `
<div
  className="tag tag-common"
  href="/tagLink"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onTouchStart={[Function]}
>
  tagName
</div>
`;

exports[`TAGSET COMPONENT should render 1`] = `
<div
  className="undefined tagSet"
>
  <div
    className="tag tag-common"
    href="/tagLink"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
  >
    tagName
  </div>
</div>
`;
